# gist_blog

./: Cargo.toml
migrations/20170217021344_create_users/: up.sql
migrations/20170217070354_create_gists/: up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs  service.rs  utils.rs
src/github/: mod.rs
templates/: 404.html  gist.html  index.html  user.html
